--- a/src/pages/Questions.css
+++ b/src/pages/Questions.css
@@ -1,8 +1,10 @@
-.quadro-perguntas{
+.quadro-perguntas {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 500px;
+    gap: 20px;
+    width: 50%;
+    max-width: 1250px;
     height: 300px;
     background-color: gray;
     padding: 1.5rem;
@@ -13,19 +15,24 @@
 
 .perguntas {
     width: 100%;
-    height: 3rem;
+    height: 3.5rem;
     border-radius: 30px;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
 }
 
 .quadro-perguntas button {
     width: 100%;
-    height: 3rem;
+    height: 3.5rem;
     border-radius: 30px;
     text-align: center;
     font-size: 18px;
+    font-weight: 600;
 }
 
 .quadro-perguntas button:hover{
