--- a/src/pages/Score.css
+++ b/src/pages/Score.css
@@ -5,11 +5,11 @@
         gap: 20px;
         width: 50%;
         max-width: 1250px;
-        height: 300px;
+        height: 50%;
         background-color: gray;
         padding: 1.5rem;
         margin: auto;
-        transform: translate(0, 50%);
+        transform: translate(0, 20%);
         border-radius: 20px;
 }
 
@@ -37,3 +37,16 @@
     padding: 0 20px;
     font-weight: 600;
 }
+
+.botao-inicio {
+    width: 200px;
+    padding: 10px;
+    background-color: gray;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
