--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,3 +1,12 @@
+.secao-login {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .login {
     display: flex;
     flex-direction: column;
@@ -6,13 +15,13 @@
     height: 300px;
     background-color: gray;
     padding: 1.5rem;
-    margin: auto;
-    transform: translate(0, 50%);
+    margin: 0 15px;
     border-radius: 20px;
 }
 
 .login h1{
     font-size: 30px;
+    background-color: gray;
 }
 
 .login input {
@@ -27,6 +36,11 @@
     cursor: pointer;
 }
 
+.login a {
+    background-color: gray;
+}
+
 .acessar:hover {
-    background-color: red;
+    background-color: rgb(55, 51, 51);
+    color: #fff;
 }
