--- a/src/pages/Score.css
+++ b/src/pages/Score.css
@@ -3,18 +3,16 @@
         flex-direction: column;
         justify-content: space-around;
         gap: 20px;
-        width: 50%;
-        max-width: 1250px;
-        height: 50%;
         background-color: gray;
         padding: 1.5rem;
-        margin: auto;
-        transform: translate(0, 20%);
+        margin: auto 20px;
+        transform: translate(0, 50%);
         border-radius: 20px;
 }
 
 .score h1 {
     text-align: center;
+    background-color: gray;
 }
 
 .card-score {
@@ -22,6 +20,7 @@
     justify-content: space-between;
     flex-direction: column;
     gap: 30px;
+    background-color: gray;
 }
 
 .card-score p {
@@ -38,6 +37,18 @@
     font-weight: 600;
 }
 
+.card-score span {
+    background-color: #fff;
+}
+
+.card-score a {
+    background-color: gray;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .botao-inicio {
     width: 200px;
     padding: 10px;
@@ -46,7 +57,12 @@
     display: flex;
     justify-content: center;
     font-size: 16px;
-    text-decoration: none;
+    font-weight: 600;
+}
+
+.botao-inicio:hover {
+    background-color: rgb(55, 51, 51);
+    color: #fff;
     cursor: pointer;
 }
 
